# findscholarships-new

./: AUTHORS  Makefile.am  README.md  configure.ac  findscholarships.cpp  main.cpp
findscholarships-new.xcodeproj/: project.pbxproj
findscholarships-new.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
findscholarships-website/: config.cfg  copy.sh  direct_copy.sh
findscholarships-website/templates/: body_part1.tpl  body_part2.tpl  category_part1.tpl  category_part2.tpl  category_part3.tpl  category_part4.tpl  header_main_part2.tpl  header_part1.tpl  header_part2.tpl
html/: CharsetConverter.cpp  CharsetConverter.h  Node.cpp  ParserDom.cpp  ParserDom.h  Uri.cpp  Uri.h  debug.h  tld.h  tree.h  utils.cpp  utils.h
include/: Makefile.am  wingetopt.h
include/fetch/: FetchedInfoBase.h  FetchedInfoScholarship.h  FetcherBase.h  FetcherDbworld.h  FetcherManual.h  FetcherScholarshipLinks.h  FetcherScholarshipPositions.h  Makefile.am
include/html/: Extensions.h  Node.h  ParserSax.h  ci_string.h  profile.h  tld.h  tree.h  utils.h
include/htmlgen/: DataEntry.h  Database.h  Header.h  HtmlGenBase.h  HtmlGenDbworld.h  HtmlGenScholarshipPosition.h  HtmlGenScholarshipsLinks.h  HtmlResult.h  Makefile.am  Manager.h  Title.h
include/init/: Init.h  InitBase.hpp  InitFindscholarships.hpp  InitWillhabentracker.hpp  Makefile.am
include/utilities/: Configuration.h  ConfigurationBase.h  ConfigurationFindscholarships.h  ConfigurationWillhabentracker.h  ConstantStrings.h  DateConverter.h  DateType.h  HelperFunctions.h  Logger.h  Makefile.am  ProgramOptions.h  TrackedSite.hpp
include/willhabentracker/: DataItem.hpp  Database.hpp  Makefile.am  (+2 more)
src/: Makefile.am  fetch.cpp  findscholarships.cpp  willhabentracker.cpp
src/fetch/: FetcherBase.cpp  FetcherDbworld.cpp  FetcherManual.cpp  FetcherScholarshipLinks.cpp  FetcherScholarshipPositions.cpp  Makefile.am  Makefile.am~  fetch.cpp
src/html/: CharsetConverter.cpp  Extensions.cpp  Makefile.am  Node.cpp  ParserDom.cpp  ParserSax.cpp  Uri.cpp  utils.cpp
src/htmlgen/: DataEntry.cpp  Database.cpp  HtmlGenBase.cpp  HtmlGenDbworld.cpp  HtmlGenScholarshipPosition.cpp  HtmlGenScholarshipsLinks.cpp  HtmlResult.cpp  Makefile.am  Manager.cpp  Title.cpp
src/init/: Init.cpp  InitBase.cpp  InitFindscholarships.cpp  InitWillhabentracker.cpp  Makefile.am
src/utilities/: Configuration.cpp  ConfigurationBase.cpp  ConfigurationFindscholarships.cpp  ConfigurationWillhabentracker.cpp  ConstantStrings.cpp  DateConverter.cpp  HelperFunctions.cpp  Logger.cpp  Makefile.am  TrackedSite.cpp
src/willhabentracker/: DataItem.cpp  Database.cpp  Makefile.am  Manager.cpp  Tracker.cpp
web-explorer.xcodeproj/: project.pbxproj
(+21 files in other folders)
